--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
+    "express-session": "^1.13.0",
     "passport": "^0.3.2",
-    "passport-google": "^0.3.0"
+    "passport-google-oauth20": "^1.0.0"
   }
 }
